--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,8 +18,7 @@ p.optionText {
 input {
     width: 250px;
 }
-
-div {
+div.borderMan {
     border: #d4e6ff solid thin;
     padding: 3px;
     margin-top: 3px;
