--- a/views/index.pug
+++ b/views/index.pug
@@ -8,8 +8,8 @@ block content
         button#makeHtml.btn.btn-warning Make HTML
         button#makeImage.btn.btn-success Create Images
 
-      # home
+    #home
 
 
     div#pageLoad
-        p To see options, select a button above.
+        p To see options, select a button above
