--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,9 @@ html
         block css
             link(rel='stylesheet', href='/bower_components/bootswatch/cerulean/bootstrap.css')
             link(rel='stylesheet', href='/stylesheets/style.css')
+            link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Roboto:300,400,500")
+            link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
+
         block script
             script(data-main="javascripts/main.js" src="/bower_components/requirejs/require.js")
     body
