--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,3 +33,9 @@ div {
     -moz-border-radius:4px;
     border-radius: 4px;
 }
+
+div.borderMan {
+    border: #d4e6ff solid thin;
+    padding: 3px;
+    margin-top: 3px;
+}
